--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sanity/vision": "^3.49.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide": "^0.395.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-sanity": "^9.4.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "sanity": "^3.49.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
